# STC

./: README.md  pyproject.toml  requirements.txt
data/activitynet_qa/: test.json
data/egoschema_subset/: egoschema_subset.json
data/mlvu/: dev_debug_mc.json
data/qaego4d/: test_mc.json
data/videomme/: new_videomme.json  random_videomme.json  videomme_subset.json
model/: abstract_rekv.py  cache.py  config.py  custom_siglip.py  launtch.sh  llava_onevision_rekv.py  longva_rekv.py  prune.py
model/attention/: rekv_attention.py
model/experiment/: DBDPC.py  k-means.py  sttm.py  tome.py
model/experiment/after_vit_compression/: dpc_knn.py
model/longva/: mm_utils.py  utils.py
model/longva/longva.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
model/longva/model/: llava_arch.py
model/longva/model/language_model/: llava_llama.py  llava_qwen.py
model/longva/model/multimodal_encoder/: clip_encoder.py  custom_clip.py
model/online_bench_inference/ovobench/: inference_distributed.py  score.py
model/online_bench_inference/ovobench/data/: ovo_bench_new.json  ovo_subset.json
model/online_bench_inference/ovobench/models/: Dispider.py  Gemini.py  InternVL2.py  LLaVA_OneVision.py  LLaVA_Video.py  VideoLLM_Online.py  _model_card.py  rekv.py
model/online_bench_inference/ovobench/models/dispider/: benchmark_model.py  mm_utils.py
model/online_bench_inference/ovobench/models/dispider/model/: builder.py  llava_arch.py  long_arch.py
model/online_bench_inference/ovobench/models/dispider/model/language_model/: builder.py
model/online_bench_inference/ovobench/models/dispider/model/language_model/qwen_model/: modeling_qwen.py
model/online_bench_inference/ovobench/models/dispider/model/multimodal_encoder/: clip_encoder.py  custom_clip_encoder.py
model/online_bench_inference/ovobench/results/rekv/: rekv_EPM_offline_distributed.json  rekv_REC_offline_distributed.json  rekv_STU_offline_distributed.json
model/online_bench_inference/ovobench/utils/: OVOBenchScore.py  chunk_videos.py
model/online_bench_inference/streamingbench/src/: eval.py
model/online_bench_inference/streamingbench/src/data/: count.py  questions_real_subset.json  real_cacher_and_pruner_output_rekv_20251108_151104.json  real_cacher_and_pruner_output_rekv_20251112_154608.json  real_cacher_and_pruner_output_rekv_20251113_182443.json  real_dart_output_rekv_20251107_170449.json  real_dart_output_rekv_20251108_124013.json.temp_1  real_dart_output_rekv_20251108_124642.json.temp_0  real_dart_output_rekv_20251108_124642.json.temp_3  real_dycoke_output_rekv_20251108_143716.json  real_output_rekv.json  real_subset_output_rekv.json  real_subset_output_rekv.json.temp_10  real_subset_output_rekv.json.temp_11  real_subset_output_rekv.json.temp_12  real_subset_output_rekv.json.temp_13  real_subset_output_rekv.json.temp_14  real_subset_output_rekv.json.temp_15  real_subset_output_rekv.json.temp_16  real_subset_output_rekv.json.temp_17  real_subset_output_rekv.json.temp_18  real_subset_output_rekv.json.temp_19  real_subset_output_rekv.json.temp_20  real_subset_output_rekv.json.temp_21  real_subset_output_rekv.json.temp_24  real_subset_output_rekv.json.temp_26  real_subset_output_rekv.json.temp_8  real_tome_output_rekv_20251108_143852.json  real_vidcom2_two_score_output_rekv_20251107_170714.json  real_visionzip_output_rekv_20251110_180946.json
model/online_bench_inference/streamingbench/src/model/: LLaVAOneVision.py  llava_onevision_rekv.py  rekv.py
model/video_qa/: README.md  base_refactored.py  configs.py  rekv_offline_refactored.py  rekv_stream_refactored.py  run_distributed.py  solver_factory.py  videomme_refactored.py
model/video_qa/eval/: eval_egoschema_subset.py
model/video_qa/utils/: __init__.py  data_utils.py  merge_utils.py  model_utils.py
online_bench_inference/OVO-Bench/: LICENSE  constant.py  inference.py  requirements.txt  score.py
online_bench_inference/OVO-Bench/models/: Dispider.py  FlashVStream.py  GPT.py  LongVU.py  MiniCPM_o.py  QWen2VL.py  rekv.py
online_bench_inference/OVO-Bench/utils/: OVOBenchScore.py
online_bench_inference/StreamingBench/src/: eval.py
online_bench_inference/StreamingBench/src/model/: rekv.py
online_bench_inference/StreamingBench/src/utils/: video_execution.py
scripts/: eval_offline_benchs.sh
scripts/ovobench_scipts/: eval_rekv.sh  score_rekv.sh
scripts/streamingbench_scripts/: eval_rekv.sh  preprocess.sh  score_rekv.sh
video_qa/: run_eval.py  videomme_rekv_offline_vqa.py
video_qa/eval/: eval_videomme.py
