[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ReKV"
version = "1.0"
description = "ReKV: Streaming Video Question-Answering With In-Context Video KV-Cache Retrieval."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    # Core ML frameworks
    "torch==2.8.0+cu128",
    "torchvision==0.23.0+cu128",
    "torchaudio==2.8.0+cu128",
    "transformers @ git+https://github.com/huggingface/transformers.git@66bc4def9505fa7c7fe4aa7a248c34a026bb552b",
    "accelerate==1.11.0",
    "flash-attn==2.8.3",
    "safetensors==0.6.2",
    "triton==3.4.0",
    
    # Video processing
    "decord==0.6.0",
    "moviepy==1.0.3",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "ffmpeg==1.4",
    "ffmpeg-python @ file:///home/conda/feedstock_root/build_artifacts/ffmpeg-python_1735317926808/work",
    
    # Data & numerical computing
    "numpy==2.3.4",
    "pandas==2.3.3",
    "einops==0.8.1",
    "scipy==1.16.3",
    "scikit-learn==1.7.2",
    "networkx==3.5",
    "sympy==1.14.0",
    "mpmath==1.3.0",
    
    # Visualization
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
    "imgcat==0.6.0",
    
    # Utilities
    "openai==1.57.1",
    "kaggle==1.7.4.5",
    "logzero==1.7.0",
    "tqdm==4.67.1",
    "pillow==12.0.0",
    "pyyaml==6.0.3",
    "regex==2025.10.23",
    "python-slugify==8.0.4",
    "pytz==2025.2",
    "six==1.17.0",
    "future @ file:///home/conda/feedstock_root/build_artifacts/future_1738926421307/work",
    
    # HTTP & API
    "httpx==0.28.1",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "huggingface-hub==0.36.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "h11==0.16.0",
    "idna==3.11",
    "anyio==4.11.0",
    "sniffio==1.3.1",
    "rfc3986==1.5.0",
    
    # Build system & packaging
    "build==1.3.0",
    "poetry==2.2.1",
    "poetry-core==2.2.1",
    "packaging==25.0",
    "pyproject-hooks==1.2.0",
    "installer==0.7.0",
    "wheel",
    "setuptools",
    
    # Data validation
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "annotated-types==0.7.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    
    # System & process management
    "psutil @ file:///home/task_175710403608886/conda-bld/psutil_1757104541537/work",
    "nvitop @ file:///home/conda/feedstock_root/build_artifacts/nvitop_1755346934447/work",
    "nvidia-ml-py @ file:///home/conda/feedstock_root/build_artifacts/nvidia-ml-py_1746576379096/work",
    "virtualenv==20.35.4",
    "filelock==3.20.0",
    "platformdirs==4.5.0",
    "distlib==0.4.0",
    "cachecontrol==0.14.4",
    "msgpack==1.1.2",
    
    # NVIDIA CUDA libraries
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    
    # Development tools
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "parso==0.8.5",
    "prompt-toolkit==3.0.52",
    "pygments==2.19.2",
    "matplotlib-inline==0.2.1",
    "stack-data==0.6.3",
    "executing==2.2.1",
    "asttokens==3.0.0",
    "pure-eval==0.2.3",
    "decorator==4.4.2",
    "traitlets==5.14.3",
    "backcall",
    "pickleshare",
    
    # Other dependencies
    "ninja==1.13.0",
    "optree==0.17.0",
    "tokenizers==0.19.1",
    "joblib==1.5.2",
    "threadpoolctl==3.6.0",
    "kiwisolver==1.4.9",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.60.1",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "tomlkit==0.13.3",
    "zipp==3.23.0",
    "importlib-metadata==8.7.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "urllib3==2.5.0",
    "bleach==6.2.0",
    "webencodings==0.5.1",
    "fastjsonschema==2.21.2",
    "jsonschema",
    "nbformat",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "dulwich==0.24.10",
    "findpython==0.7.1",
    "pbs-installer==2025.11.20",
    "pexpect==4.9.0",
    "ptyprocess==0.7.0",
    "cleo==2.1.0",
    "crashtest==0.4.1",
    "rapidfuzz==3.14.3",
    "shellingham==1.5.4",
    "keyring==25.7.0",
    "secretstorage==3.5.0",
    "cryptography==46.0.3",
    "jeepney==0.9.0",
    "pkginfo==1.12.1.2",
    "protobuf==6.33.0",
    "pycparser==2.23",
    "cffi==2.0.0",
    "zstandard==0.25.0",
    "jiter==0.11.1",
    "text-unidecode==1.3",
    "trove-classifiers==2025.11.14.15",
    "more-itertools==10.8.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.3.0",
    "distro==1.9.0",
    "fsspec==2025.9.0",
    "proglog==0.1.12",
    "wcwidth==0.2.14",
]

[tool.setuptools.packages.find]
exclude = [".git*", ".vscode*", "data*", "model_zoo*", "results*", "scripts*", "video_chatgpt*", "*.log", "*.pyc"]

[tool.wheel]
exclude = [".git*", ".vscode*", "data*", "model_zoo*", "results*", "scripts*", "video_chatgpt*", "*.log", "*.pyc"]